--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.4",
-    "mongoose": "^4.3.7"
+    "mongoose": "^4.3.7",
+    "body-parser": "^1.14.2"
   },
   "devDependencies": {
     "del": "^2.1.0",
