--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "express": "^4.13.4",
     "mongoose": "^4.3.7",
-    "body-parser": "^1.14.2"
+    "body-parser": "^1.14.2",
+    "axios": "^0.9.1"
   },
   "devDependencies": {
     "del": "^2.1.0",
